@@ -4,7 +4,8 @@ SVN
 -bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments 
 -bug#0001815: 1-minute with 5-minute crontab broken
 -bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
--bug: accept "Connection refused" on TCP ping tests
+-bug:         accept "Connection refused" on TCP ping tests
+-bug:         correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)
 -bug#0001504: no newline fix
 -bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
 
